--- a/css/main.css
+++ b/css/main.css
@@ -1022,7 +1022,14 @@ a.btn-destaque:hover {
   }
 }
 section.contato {
-  background-color: #fff8f0;
+  background-color: var(--fundo-destaque);
+  padding-top: 75px;
+  box-shadow: 0px 5px 10px var(--);
+  margin-bottom: 5px;
+  border-radius: 0px 0px 5px 5px var(--sombra-suave);
+  padding: 4rem 2rem;
+  padding-top: 85px;
+  text-align: center;
 }
 
 .contato h2 {
@@ -1171,6 +1178,15 @@ footer img {
   .footer-bottom {
     text-align: right;
   }
+}
+section, footer {
+  padding-top: 75px;
+  box-shadow: 0px 5px 10px var(--madeira-transp);
+  margin-bottom: 5px;
+  border-radius: 0px 0px 5px 5px;
+  padding: 4rem 2rem;
+  padding-top: 85px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
